daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N18_bad_review_receipt/T1.hex
86781b6461796c696768742e617574682e7472616e7363726970742e763658406ce6fe25263863cc410bcd3addf0da0d1e6e7e033c557cadc59f8c500c023b8194b3991cc484f02dbd146573837ed12bb41724a4507b8826aa9354f15a1c5a51584015a65c643624d0be63f3bce8dde917676f0a41cff34ded041c2c41a60e6f38b9fed76502a1b4dbf015e1a86ef2a7a8165482c6ae09a2c9dedd516d4bbd0e923d5840f0634a402baece70bca65533540fa90252d4c188195575189467b60a63bf5d7dbf00fcfe8f40df9e38af4ae74939f70aa806126e857957f4e0f3f60016fb1f4358208d86511678977f49432d18916b09837b41ff065acb747af67dbd4662e16acd805840485d636de0101bd93c04c72b99a5e1a13cf169cfe914507db73073f3b558380cf38d4d44713483b3703ef89acee2137cd7262609288e314165bca1780fde1b99
